Form keyup events. Validation events

--- a/form/index.html
+++ b/form/index.html
@@ -12,6 +12,7 @@
         <h3>User registration</h3>
         <input type="text" id="username" placeholder="Enter Username">
         <input type="submit" value="submit">
+        <div class="feedback"></div>
     </form>
     <script src="form.js"></script>
 </body>
